fix(ui): tweak icon's vertical-align in section.coto-type-switch

--- a/cotoami_desktop/ui/assets/css/app/_flow-input.scss
+++ b/cotoami_desktop/ui/assets/css/app/_flow-input.scss
@@ -62,7 +62,7 @@ section.flow-input {
         span.material-symbols {
           font-size: 16px; // use px here to fix the icon size
           margin-right: 5px;
-          vertical-align: sub;
+          vertical-align: -3px;
         }
 
         .label {
